# lidar-streaming-experiments

./: .gitignore  README.md  index.html  package-lock.json  package.json
client/: app.js  dash.html  hls.html  index.html  package-lock.json  package.json
client/css/: style.css
client/src/: ARENA3DImage.js  ARENA3DStream.js  ARENA3DVideo.js  ARENA3DVideo2.js  PointCloudShaderMaterial.js  PtCloudViewerScene.js  Record3DScene.js  index.js
client/src/shaders/: frag.glsl  frag2.glsl  vert.glsl  vert2.glsl
client/src/video-sources/: MQTTStreamedVideoSource.js  WebRTCStreamedVideoSource.js  WiFiStreamedVideoSource.js
pcl_codec/: 1622572530.186859264.pcd  CMakeLists.txt
pcl_codec/src/depth_image/: depth_util.cpp  test.py  xyz_rgb_decoding.cpp  xyz_rgb_encoding.cpp
pcl_codec/src/octree/: octree_decoding.cpp  octree_encoding.cpp
server/: camera.py  http_server.py  mqtt_server.py  requirements.txt  rtmp.py  rtmp_rgbd.py  run_http.sh  run_mqtt.sh  server.py
src/: PointCloudShaderMaterial.js  Record3DVideo.js  constants.js
src/shaders/: frag.glsl  vert.glsl
src/video-sources/: SignalingClient.js
